# process-manager

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
monitor/: admin.py  models.py  services.py  tests.py  urls.py  views.py
monitor/migrations/: 0001_initial.py  0002_killlog.py
monitor/templates/monitor/: kill_log.html  processes.html  snapshot_detail.html  snapshot_list.html
monitor/templates/monitor/partials/: process_table.html
process_manager/: settings.py  urls.py
templates/: base.html
templates/registration/: login.html
