[project]
name = "process-manager"
version = "0.1.0"
description = "Django app for remote process monitoring and control"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = ["venv", ".venv", "migrations", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = false
ignore_missing_imports = true
exclude = ["migrations"]

[tool.django-stubs]
django_settings_module = "process_manager.settings"
